@@ -14,6 +14,7 @@ export(TwoStepParam)
 export(approxSilhouette)
 export(bootstrapStability)
 export(centers)
+export(clusterRMSD)
 export(clusterRows)
 export(clusterSweep)
 export(compareClusterings)
@@ -81,6 +82,7 @@ importFrom(stats,hclust)
 importFrom(stats,kmeans)
 importFrom(stats,median)
 importFrom(stats,quantile)
+importFrom(stats,var)
 importFrom(utils,capture.output)
 importFrom(utils,getFromNamespace)
 importFrom(utils,head)
